# claude-os

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE.md  dev.ps1  index.html  install-cli.ps1  package-lock.json  package.json  release.ps1
.github/workflows/: release.yml
sidecar/: package-lock.json  package.json
sidecar/src/: index.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BgLayers.tsx  LeftPanel.tsx  MessageOutput.tsx  ModelPicker.tsx  NeuralOrb.tsx  PromptInput.tsx  TelemetryPanel.tsx  TopBar.tsx  UpdateBanner.tsx
src/lib/: agent-client.ts  models.ts  sessionModels.ts  tabs.ts  types.ts
